[package]
name = "voyager_client"
version = "0.3.4"
edition = "2021"
description = "Crate that contains base clients for interacting with the NASA Open APIs"
categories = ["api-bindings", "science", "aerospace"]
documentation = "https://docs.rs/voyager_client"
repository = "https://github.com/ethgallucci/voyager"
license = "MIT"
authors = ["Ethan Gallucci <ethgallucci@gmail.com>"]

[lib]
name = "voyager_client"
path = "src/lib.rs"
test = true
doctest = true
bench = true

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.73"
ureq = "2.3.1"