[package]
name = "nerva"
version = "0.3.4"
edition = "2021"
description = "Crate that contains base clients for interacting with the NASA Open APIs"
categories = ["api-bindings", "science", "aerospace"]
documentation = "https://docs.rs/voyager_client"
repository = "https://github.com/ethgallucci/voyager"
license = "MIT"
authors = ["Ethan Gallucci <ethgallucci@gmail.com>"]

[lib]
name = "nerva"
path = "src/lib.rs"
test = true
doctest = true
bench = true

[[test]]
name = "apod"
path = "tests/apod.rs"

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.17"
matches = "0.1.9"
pretty_env_logger = "0.4.0"
reqwest = "0.11.12"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.73"
ureq = "2.3.1"
